pvt-grupp2-live/.sbtserver/master.log
New log file opened at Wed Apr 22 13:46:30 CEST 2015 by 11256@Laptopz
jvm 11256@Laptopz
jvm vmName=Java HotSpot(TM) 64-Bit Server VM vmVendor=Oracle Corporation vmVersion=25.40-b25
jvm specName=Java Virtual Machine Specification specVendor=Oracle Corporation specVersion=1.8
jvm arguments: [-Xms256m, -Xmx1024m, -XX:MetaspaceSize=64m, -XX:MaxMetaspaceSize=256m]
Starting event engine
Starting sbt command engine
Waiting for sbt command engine
Command engine arguments=List()
Command engine baseDirectory=C:\Users\Nicklas\Documents\GitHub\Live\pvt-grupp2-live
Command engine initial remaining commands List(--initialize, onFailure load-failed, boot, server-send-ready-for-request, server-handle-next-server-request)
> --initialize
> initialize
> onFailure load-failed
> boot
> reload
[Loading] Scanning directory C:\Users\Nicklas\Documents\GitHub\Live\pvt-grupp2-live\project
C:\Users\Nicklas\Documents\GitHub\Live\pvt-grupp2-live\project\plugins.sbt:3: error: value ivyPatterns is not a member of object sbt.Resolver
resolvers += Resolver.url("heroku-sbt-plugin-releases", url("http://dl.bintray.com/heroku/sbt-plugins/")) (Resolver.ivyPatterns)
                                                                                                                    ^
Type error in expression
> load-failed
Failed to load project.
> server-wait-for-reboot
Done executing sbt server engine, result Right(Exit(0))
Closing listening server socket
Waiting for socket thread
Waiting for request processor thread
Waiting for command engine result
Returning control to sbt launcher with result Exit(0)
Closing the 11256@Laptopz logs at Wed Apr 22 13:50:34 CEST 2015, goodbye.
